--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,34 +5,35 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/nav_camera"
-            android:icon="@drawable/ic_menu_camera"
-            android:title="Import" />
+            android:id="@+id/nav_feed"
+            android:icon="@drawable/ic_feed_24dp"
+            android:title="@string/feed" />
         <item
-            android:id="@+id/nav_gallery"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="Gallery" />
+            android:id="@+id/nav_files"
+            android:icon="@drawable/ic_folder_24dp"
+            android:title="@string/files" />
         <item
-            android:id="@+id/nav_slideshow"
-            android:icon="@drawable/ic_menu_slideshow"
-            android:title="Slideshow" />
+            android:id="@+id/nav_all_photos"
+            android:icon="@drawable/ic_all_photos_24dp"
+            android:title="@string/all_photos" />
         <item
-            android:id="@+id/nav_manage"
-            android:icon="@drawable/ic_menu_manage"
-            android:title="Tools" />
+            android:id="@+id/nav_offline"
+            android:icon="@drawable/ic_offline_24dp"
+            android:title="@string/offline" />
+        <item
+            android:id="@+id/nav_trash"
+            android:icon="@drawable/ic_trash_24dp"
+            android:title="@string/trash" />
     </group>
 
-    <item android:title="Communicate">
-        <menu>
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_menu_share"
-                android:title="Share" />
-            <item
-                android:id="@+id/nav_send"
-                android:icon="@drawable/ic_menu_send"
-                android:title="Send" />
-        </menu>
-    </item>
-
+    <group
+        android:id="@+id/menu_prefs"
+        android:checkableBehavior="none">
+        <item
+            android:id="@+id/nav_clear_space"
+            android:checkable="true"
+            android:icon="@drawable/ic_clear_space_24dp"
+            android:title="@string/clear_space">
+        </item>
+    </group>
 </menu>
