--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -24,9 +24,11 @@
         <com.ogaclejapan.smarttablayout.SmartTabLayout
             android:id="@+id/tabs_main"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:tabGravity="fill"
-            app:tabMode="fixed" />
+            android:layout_height="?attr/actionBarSize"
+            app:stl_distributeEvenly="true"
+            app:stl_dividerThickness="0dp"
+            app:stl_indicatorThickness="@dimen/tab_indicator_thickness"
+            app:stl_indicatorInterpolation="linear"/>
 
     </android.support.design.widget.AppBarLayout>
 
