--- a/app/src/main/res/layout/item_saved_photo.xml
+++ b/app/src/main/res/layout/item_saved_photo.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/iv_photo"
-    android:layout_height="@dimen/photo_greed_height"
+    android:layout_height="120dp"
     android:layout_margin="@dimen/photo_greed_margin"
     android:layout_width="match_parent"
     android:adjustViewBounds="true"
-    android:scaleType="centerCrop" />
+    android:scaleType="centerCrop"
+    android:background="?attr/selectableItemBackground"/>
