--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,8 @@
     <color name="colorAccent">#1565c0</color>
     <color name="greyLight">#bdbdbd</color>
     <color name="grey">#757575</color>
+    <color name="greyDark">#424242</color>
+    <color name="gradientStart">#2b2b2b</color>
+    <color name="gradientEnd">#000000</color>
+    <color name="black">#000000</color>
 </resources>
