--- a/app/src/main/res/layout/item_pager_photo.xml
+++ b/app/src/main/res/layout/item_pager_photo.xml
@@ -5,5 +5,4 @@
     android:id="@+id/iv_photo_detail"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:scaleType="fitCenter"
-    android:src="@drawable/leak_canary_icon" />
+    android:scaleType="fitCenter" />
