--- a/app/src/main/res/layout/item_saved_photo.xml
+++ b/app/src/main/res/layout/item_saved_photo.xml
@@ -2,7 +2,7 @@
 <ImageView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/iv_photo"
-    android:layout_height="120dp"
+    android:layout_height="@dimen/saved_photo_height"
     android:layout_margin="@dimen/photo_greed_margin"
     android:layout_width="match_parent"
     android:adjustViewBounds="true"
