--- a/app/src/main/res/layout/item_trash.xml
+++ b/app/src/main/res/layout/item_trash.xml
@@ -10,6 +10,7 @@
         android:layout_width="@dimen/photo_trash_size"
         android:layout_height="@dimen/photo_trash_size"
         android:layout_margin="@dimen/app_margin"
+        android:paddingBottom="@dimen/app_margin"
         android:scaleType="centerCrop" />
 
     <TextView
@@ -27,9 +28,8 @@
         style="@style/SubtitleItem"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/iv_trash"
         android:layout_below="@id/tv_name"
-        android:layout_marginTop="@dimen/app_margin"
+        android:layout_marginTop="@dimen/title_subtitle_margin"
         android:layout_marginEnd="@dimen/app_margin"
         android:layout_toEndOf="@+id/iv_trash"
         android:textAlignment="viewStart"/>
