--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,4 @@
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="nav_header_vertical_spacing">8dp</dimen>
@@ -10,4 +9,6 @@
     <dimen name="photo_greed_height">200dp</dimen>
     <dimen name="photo_trash_size">70dp</dimen>
     <dimen name="app_margin">16dp</dimen>
+    <dimen name="title_subtitle_margin">8dp</dimen>
+    <dimen name="saved_photo_height">120dp</dimen>
 </resources>
