--- a/app/src/main/res/layout/fragment_photo_details.xml
+++ b/app/src/main/res/layout/fragment_photo_details.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/black"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <android.support.design.widget.AppBarLayout
@@ -25,7 +26,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
-        android:layout_below="@+id/photo_details_appbar"
-        android:background="@android:color/black" />
+        android:layout_below="@+id/photo_details_appbar" />
 
 </RelativeLayout>
